--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>All question</title>
 </head>
 <body>
-      <a href="/calci/index.html">calci</a>
-      <a href="/font resize/">fomt resizer</a>
-      <a href="/heading change/">heading changer</a>
-      <a href="/loading/">loading</a>
-      <a href="/password checker/">password checker</a>
-      <a href="/primery secondry btn/">primery secondry btn</a>
-      <a href="/name age yuga/">name age yuga</a>
-      <a href="/name age power/">name age power</a>
-      <a href="/power/">power</a>
-      <a href="/fake news det/">fake news detector</a>
-      <a href="/txt color changer/">txt color changer</a>
+      <a href="/calci/index.html">calci</a><br>
+      <a href="/font resize/">fomt resizer</a><br>
+      <a href="/heading change/">heading changer</a><br>
+      <a href="/loading/">loading</a><br>
+      <a href="/password checker/">password checker</a><br>
+      <a href="/primery secondry btn/">primery secondry btn</a><br>
+      <a href="/name age yuga/">name age yuga</a><br>
+      <a href="/name age power/">name age power</a><br>
+      <a href="/power/">power</a><br>
+      <a href="/fake news det/">fake news detector</a><br>
+      <a href="/txt color changer/">txt color changer</a><br>
      
