--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="/loading/">loading</a><br>
       <a href="/password checker/">password checker</a><br>
       <a href="/primery secondry btn/">primery secondry btn</a><br>
-      <a href="/name age yuga/">name age yuga</a><br>
+      <a href="https://replit.com/@ASHUTOSHsingh69/name-age-yuga#index.js">name age yuga</a><br>
       <a href="/name age power/">name age power</a><br>
       <a href="/power/">power</a><br>
       <a href="/fake news det/">fake news detector</a><br>
