--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <a href="/password checker/">password checker</a><br>
       <a href="/primery secondry btn/">primery secondry btn</a><br>
       <a href="https://replit.com/@ASHUTOSHsingh69/name-age-yuga#index.js">name age yuga</a><br>
-      <a href="/name age power/">name age power</a><br>
-      <a href="/power/">power</a><br>
-      <a href="/fake news det/">fake news detector</a><br>
+      <a href="https://replit.com/@ASHUTOSHsingh69/name-age-and-power#index.js">name age power</a><br>
+      <a href="https://replit.com/@ASHUTOSHsingh69/power#index.js">power</a><br>
+      <a href="https://replit.com/@ASHUTOSHsingh69/fake-news-det#index.js">fake news detector</a><br>
       <a href="/txt color changer/">txt color changer</a><br>
+      <a href="https://replit.com/@ASHUTOSHsingh69/highest-marks#index.js">highest marks</a>
      
