--- a/calci/index.html
+++ b/calci/index.html
@@ -29,6 +29,7 @@
     </div>
     <div>
       <p id="output">Result:</p>
+      hello
     </div>
     <script src="script.js" type="text/javascript"></script>
   </body>
